--- a/index.html
+++ b/index.html
@@ -10,11 +10,30 @@
 
     <div class="header">
         <ul>
-            <li><a class ="left-links" href="#">Header Logo</a></li>
-            <li><a class="right-links" href="#">header link one</a></li>
-            <li><a class="right-links" href="#">header link two</a></li>
-            <li><a class="right-links" href="#">header link thre</a></li>
+            <div class="left-links">
+                <li><a href="#">Header Logo</a></li>
+            </div>
+            
+            <div class="right-links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link thre</a></li>
+            </div>
         </ul>
+    </div>
+
+    <div class="title-container">
+        <div class="first-section">
+            <div class="main-title">This website is awesome</div>
+            <div class="title-subtext">This website has some subtext that goes here under the main title. 
+              It's a smaller font and the color is lower contrast
+            </div>
+            <div class="sign-up-button">Sign Up</div>
+        </div>
+
+        <div class="second-section">
+            <div class="img-holder">this is a placeholder for an image</div>
+        </div>
     </div>
     
 </body>
