Update index with additional sections, styled backgrounds, and corrected body height for viewport

--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
             <div class="img-holder">this is a placeholder for an image</div>
         </div>
     </div>
+
+    <div class="info">
+        <p>Text in info section</p>
+    </div>
+
+    <div class ="quotes">
+        <p>text in quotes</p>
+    </div>
+
+    <div class="sign-up">
+        <p>Text in sing-up</p>
+    </div>
+
+    <div class="footer">
+        <p>Text in footer</p>
+    </div>
     
 </body>
 </html>
