--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <div class="right-links">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
-                <li><a href="#">header link thre</a></li>
+                <li><a href="#">header link three</a></li>
             </div>
         </ul>
     </div>
 
     <div class="title-container">
         <div class="first-section">
-            <div class="main-title">This website is awesome</div>
+            <div class="main-title"><h2>This website is awesome</h2></div>
             <div class="title-subtext">This website has some subtext that goes here under the main title. 
               It's a smaller font and the color is lower contrast
             </div>
@@ -49,7 +49,7 @@
     </div>
 
     <div class="footer">
-        <p>Text in footer</p>
+        <p>Copyright &copy The Odin Project 2021</p>
     </div>
     
 </body>
