Update info section with header and additional section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     </div>
 
     <div class="info">
-        <p>Text in info section</p>
+        <div class="info-one"><h2>Some random informaiton.</h2></div>
+        <div class="info-two">
+        </div>
     </div>
 
     <div class ="quotes">
