--- a/index.html
+++ b/index.html
@@ -43,11 +43,17 @@
     </div>
 
     <div class ="quotes">
-        <p>text in quotes</p>
+        <p>"Don't believe everything you read on the internet"</p>
+        <p>-Abe Lincoln...probably...</p>
     </div>
 
     <div class="sign-up">
-        <p>Text in sing-up</p>
+        <div class="sign-up-text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        
+        <div class="sign-up-button"><button>Sign up</button></div>
     </div>
 
     <div class="footer">
