Updated info section with insert card reminder

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 
     <div class="info">
         <div class="info-one"><h2>Some random informaiton.</h2></div>
-        <div class="info-two">
-        </div>
+        <div class="info-two">insert card here</div>
     </div>
 
     <div class ="quotes">
@@ -52,7 +51,7 @@
             <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
         </div>
-        
+
         <div class="sign-up-button"><button>Sign up</button></div>
     </div>
 
