--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 </head>
 <body>
 
+    <div class="body-container">
+
     <div class="header">
-        <ul>
-            <div class="left-links">
+        <div class="left-links">
+            <ul>
                 <li><a href="#">Header Logo</a></li>
-            </div>
+            </ul>
+         </div>
             
             <div class="right-links">
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
             </div>
         </ul>
     </div>
@@ -59,5 +64,6 @@
         <p>Copyright &copy The Odin Project 2021</p>
     </div>
     
+</div>
 </body>
 </html>
