Update title section with button and proper flex layout

--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
 
     <div class="title-container">
         <div class="first-section">
-            <div class="main-title"><h2>This website is awesome</h2></div>
-            <div class="title-subtext">This website has some subtext that goes here under the main title. 
-              It's a smaller font and the color is lower contrast
-            </div>
-            <div class="sign-up-button">Sign Up</div>
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title. 
+              It's a smaller font and the color is lower contrast</p>
+            <p><button id="sign-up-button1">Sign up</button></p>
         </div>
 
         <div class="second-section">
@@ -57,7 +56,7 @@
             <p>Sign up for our product by clicking that button right over there!</p>
         </div>
 
-        <div class="sign-up-button"><button>Sign up</button></div>
+        <div class="sign-up-button" id="sign-up-button2"><button>Sign up</button></div>
     </div>
 
     <div class="footer">
