--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
     </div>
 
     <div class="info">
-        <div class="info-one"><h2>Some random informaiton.</h2></div>
-        <div class="info-two">insert card here</div>
+        <div class="info-header"><h2>Some random informaiton.</h2></div>
+        <div class="info-card"></div>
+        <div class="info-card"></div>
+        <div class="info-card"></div>
+        <div class="info-card"></div>
     </div>
 
     <div class ="quotes">
