Update quotes with flexboxes

--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
     </div>
 
     <div class ="quotes">
-        <p>"Don't believe everything you read on the internet"</p>
-        <p>-Abe Lincoln...probably...</p>
+        <div class="quote">
+            <p>"Don't believe everything you read on the internet"</p>
+        </div>
+        <div class="quote-author">
+            <p>-Abe Lincoln...probably...</p>
+        </div>
     </div>
 
     <div class="sign-up">
