--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
     </div>
 
     <div class="sign-up">
-        <div class="sign-up-text">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="sign-up-box">
+            <div class="sign-up-text">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+        
+            <div class="sign-up-button" id="sign-up-button2"><button>Sign up</button></div>
         </div>
-
-        <div class="sign-up-button" id="sign-up-button2"><button>Sign up</button></div>
     </div>
-
     <div class="footer">
         <p>Copyright &copy The Odin Project 2021</p>
     </div>
