Updated body flex to space-between, then added flex 1 to all parent containers between header and footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class="body-container">
+    <!-- <div class="body-container"> -->
 
     <div class="header">
         <div class="left-links">
@@ -71,6 +71,6 @@
         <p>Copyright &copy The Odin Project 2021</p>
     </div>
     
-</div>
+<!-- </div> -->
 </body>
 </html>
