Update font color and size for header, main title, and information sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="left-links">
             <ul>
-                <li><a href="#">Header Logo</a></li>
+                <li>Header Logo</li>
             </ul>
          </div>
             
