--- a/index.html
+++ b/index.html
@@ -42,11 +42,23 @@
 
     <div class="info">
         <div class="info-header"><h2>Some random informaiton.</h2></div>
-        <div class="info-card"></div>
-        <div class="info-card"></div>
-        <div class="info-card"></div>
-        <div class="info-card"></div>
-    </div>
+        <div class="idfk">
+            <div class="info-card"></div>
+            <div class="info-text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="idfk">
+            <div class="info-card"></div>
+            <div class="info-text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="idfk">
+            <div class="info-card"></div>
+            <div class="info-text">this is some subtext under an illustration or image</div>
+        </div>
+        <div>
+            <div class="info-card"></div>
+            <div class="info-text">this is some subtext under an illustration or image</div>
+        </div>
+     </div>
 
     <div class ="quotes">
         <div class="quote">
