--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 
     <div class ="quotes">
         <div class="quote">
-            <p>"Don't believe everything you read on the internet"</p>
+            <p>"This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people actuall read it.
+                Who knows? All I know is that it looks nice."</p>
         </div>
         <div class="quote-author">
             <p>-Abe Lincoln...probably...</p>
