--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="title-container">
         <div class="first-section">
-            <h2>This website is awesome</h2>
+            <h2 id="hero-header">This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title. 
               It's a smaller font and the color is lower contrast</p>
             <p><button id="sign-up-button1">Sign up</button></p>
