--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
         
-            <div class="sign-up-button" id="sign-up-button2"><button>Sign up</button></div>
+            <div class="sign-up-button"><button id="sign-up-button2">Sign up</button></div>
         </div>
     </div>
     <div class="footer">
