--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 
     <div class ="quotes">
         <div class="quote">
-            <p>"This is an inspiring quote, or a testimonial from a customer.
+            <div>"This is an inspiring quote, or a testimonial from a customer.
                 Maybe it's just filling up space, or maybe people actuall read it.
-                Who knows? All I know is that it looks nice."</p>
+                Who knows? All I know is that it looks nice."</div>
         </div>
         <div class="quote-author">
-            <p>-Abe Lincoln...probably...</p>
+            <div>-Abe Lincoln...probably...</div>
         </div>
     </div>
 
