Correct spelling of Information

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="info">
-        <div class="info-header"><h2>Some random informaiton.</h2></div>
+        <div class="info-header"><h2>Some random information.</h2></div>
         <div class="idfk">
             <div class="info-card"></div>
             <div class="info-text">this is some subtext under an illustration or image</div>
