Update informaiton section layout. Added flexbox and padding

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 Who knows? All I know is that it looks nice."</div>
         </div>
         <div class="quote-author">
-            <div>-Abe Lincoln...probably...</div>
+            <div>-Thor, God of Thunder</div>
         </div>
     </div>
 
